Editar y eliminar servicios y toats

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 	<button type="button" class="btn-a11y" (click)="increaseFont()" aria-label="Aumentar tamaño de letra" title="Aumentar letra">A+</button>
 </div>
 
+<app-toast></app-toast>
 <router-outlet />
